# puregym-tracker

./: .env.example  .gitignore  LICENSE.txt  README.md
.lovable/: plan.md
Docker/: docker-compose.yml
backend/: docker-compose-rpi.yml  docker-compose.yml
backend-rpi/: Dockerfile-rpi  docker-compose-rpi.yml  docker-compose.yml
backend-rpi/fastapi/: main.py
backend-rpi/puregym-api-client/: Dockerfile-rpi  pyproject.toml
backend/database/initdb/: 01-schema.sql  02-users.sh
backend/fastapi/: Dockerfile  main.py  models.py  pyproject.toml  queries.py  rpi.Dockerfile
backend/puregym-api-client/: Dockerfile
frontend/: docker-compose.yml
frontend/frontend/: package-lock.json  package.json  vite.config.ts
frontend/frontend/src/: App.tsx  api.ts
frontend/frontend/src/components/: AttendanceChart.tsx  DashboardHeader.tsx  GetAttendance.tsx  GymSelector.tsx  LoadingState.tsx
frontend/frontend/src/hooks/: useAttendance.ts  useGyms.ts
frontend/frontend/src/routes/: index.tsx
frontend/frontend/src/services/: api.ts  mock.ts
frontend/frontend/src/types/: api.ts
puregym-api-client/: app.py
src/: styles.css
src/components/: DateSelector.tsx  ErrorState.tsx  GymMap.tsx
src/hooks/: useMember.ts
src/pages/: DashboardPage.tsx
src/services/: mock.ts
