[tool.poetry]
name = "puregym-api-client"
version = "0.1.0"
description = "Service to poll PureGym API for attendance numbers."
authors = ["chrisjackr"]
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
requests = ">=2.33.1,<3.0.0"
apscheduler = ">=3.11.2,<4.0.0"
puregym-attendance = ">=2.0,<3.0"
python-dotenv = ">=1.2.2,<2.0.0"
psycopg2-binary = "^2.9.12"

[tool.poetry.group.dev.dependencies]
pytest = ">=9.0.3,<10.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"