[tool.poetry]
name = "api"
version = "0.1.0"
description = "FastAPI to serve frontend."
authors = ["chrisjackr"]
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
requests = ">=2.33.1,<3.0.0"
python-dotenv = ">=1.2.2,<2.0.0"
psycopg2-binary = "^2.9.12"
fastapi = "^0.136.1"
uvicorn = "^0.46.0"
puregym-attendance = ">=2.0,<3.0"
pydantic = "^2.13.4"
starlette = "^1.2.1"

[tool.poetry.group.dev.dependencies]
pytest = ">=9.0.3,<10.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.fastapi]
entrypoint = "backend:fastapi:main:app"
